--- a/server.cfg
+++ b/server.cfg
@@ -10,6 +10,7 @@ website: example.com
 language: en
 description: 'alt:V Sample Server'
 modules: [ node-module ]
+debug: true
 resources: [
-  
+  catchme
 ]
